rename object handler grpc implemented
