# code/go/0chain.net/blobbercore/openapi/blobber.swagger.json
@@ -54,6 +54,44 @@
         ]
       }
     },
+    "/v1/file/rename/{allocation}": {
+      "post": {
+        "operationId": "Blobber_RenameObject",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1RenameObjectResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "allocation",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1RenameObjectRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Blobber"
+        ]
+      }
+    },
     "/v2/allocation": {
       "get": {
         "operationId": "Blobber_GetAllocation",
@@ -650,10 +688,10 @@
         "connectionId": {
           "type": "string"
         },
-        "dest": {
+        "allocation": {
           "type": "string"
         },
-        "allocation": {
+        "dest": {
           "type": "string"
         }
       }
@@ -982,6 +1020,57 @@
           "items": {
             "$ref": "#/definitions/v1ReferencePath"
           }
+        }
+      }
+    },
+    "v1RenameObjectRequest": {
+      "type": "object",
+      "properties": {
+        "context": {
+          "$ref": "#/definitions/v1RequestContext"
+        },
+        "path": {
+          "type": "string"
+        },
+        "pathHash": {
+          "type": "string"
+        },
+        "connectionId": {
+          "type": "string"
+        },
+        "allocation": {
+          "type": "string"
+        },
+        "newName": {
+          "type": "string"
+        }
+      }
+    },
+    "v1RenameObjectResponse": {
+      "type": "object",
+      "properties": {
+        "filename": {
+          "type": "string"
+        },
+        "size": {
+          "type": "string",
+          "format": "int64"
+        },
+        "contentHash": {
+          "type": "string"
+        },
+        "merkleRoot": {
+          "type": "string"
+        },
+        "uploadLength": {
+          "type": "string",
+          "format": "int64",
+          "description": "UploadLength indicates the size of the entire upload in bytes. The value MUST be a non-negative integer."
+        },
+        "uploadOffset": {
+          "type": "string",
+          "format": "int64",
+          "description": "Upload-Offset indicates a byte offset within a resource. The value MUST be a non-negative integer."
         }
       }
     },
